--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   font-family: sans-serif;
   padding: 20px;
-  background: #f5f5f5;
+  background: #f5e7e2;
 }
 
 #malla {
@@ -27,7 +27,7 @@ body {
 
 .deshabilitada {
   background-color: #e3b5a4;
-  color: #e3b5a4;
+  color: #d4a493;
   border-color: #d4a493;
   cursor: not-allowed;
 }
