--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  font-family: sans-serif;
+  font-family: Helvetica;
   padding: 20px;
   background: #f5e7e2;
 }
@@ -38,8 +38,8 @@ body {
 .materia {
   padding: 10px;
   border-radius: 8px;
-  background-color: #660000;
-  border: 3px solid #ccc;
+  background-color: #e19494;
+  border: 3px solid #b66262;
   cursor: pointer;
   min-width: 200px;
   transition: 0.2s;
