--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   font-family: Helvetica;
-  color: #ffffff;
+  color: #d99393;
   text-align: center;
   padding: 20px;
   background: #f5e7e2;
