--- a/style.css
+++ b/style.css
@@ -65,8 +65,8 @@ body {
 }
 
 .aprobada {
-  background-color: #84a59d;
-  border-color: #68a495;
+  background-color: #e24141;
+  border-color: #c73636;
 }
 
 #progreso-container {
