--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ body {
 
 #progreso-container {
   width: 100%;
-  background-color: #ddd;
+  background-color: #f2c3c3;
   border-radius: 10px;
   overflow: hidden;
   margin-bottom: 20px;
