--- a/style.css
+++ b/style.css
@@ -118,3 +118,22 @@ body {
   color: #b25e00;
   margin-top: 0;
 }
+#licenciatura-container {
+  background: #fff8f5;
+  border-radius: 12px;
+  padding: 20px;
+  box-shadow: 0 0 12px #ccc;
+}
+
+#tecnico-container {
+  background: #fdf0e6;
+  border-radius: 12px;
+  padding: 15px;
+  margin-bottom: 20px;
+  box-shadow: inset 0 0 8px #b25e00aa;
+}
+
+#tecnico-container h3 {
+  color: #b25e00;
+  margin-top: 0;
+}
