--- a/style.css
+++ b/style.css
@@ -99,7 +99,15 @@ body {
   pointer-events: none;
 }
 
-#malla-tecnico, #malla-licenciatura {
+#malla-tecnico {
+  display: inline-flex; /* que el contenedor se ajuste al ancho de sus hijos */
+  gap: 20px;
+  padding: 10px 0;
+  overflow-x: visible; /* para evitar scroll si no es necesario */
+  max-width: none; /* asegurate que no limite el ancho */
+}
+
+#malla-licenciatura {
   display: flex;
   gap: 20px;
   overflow-x: auto;
@@ -134,6 +142,10 @@ body {
 }
 
 #tecnico-container h3 {
-  color: #b25e00;
-  margin-top: 0;
+ width: max-content; /* ajusta al contenido */
+  margin: 0 auto 20px; /* para centrarlo y dar espacio abajo */
+  background: #fdf0e6;
+  border-radius: 12px;
+  padding: 15px;
+  box-shadow: inset 0 0 8px #b25e00aa;
 }
