--- a/style.css
+++ b/style.css
@@ -122,23 +122,18 @@ body {
   box-shadow: 0 0 10px #ccc;
 }
 
-#tecnico-container h2, #licenciatura-container h2 {
+#tecnico-container h3, #licenciatura-container h2 {
   color: #b25e00;
   margin-top: 0;
 }
+
 #licenciatura-container {
+  max-width: 1300px; /* ancho total deseado para 5 columnas (5*250 + gaps) */
+  margin: 0 auto;
+  padding: 20px;
   background: #fff8f5;
   border-radius: 12px;
-  padding: 20px;
   box-shadow: 0 0 12px #ccc;
-}
-
-#tecnico-container {
-  background: #fdf0e6;
-  border-radius: 12px;
-  padding: 15px;
-  margin-bottom: 20px;
-  box-shadow: inset 0 0 8px #b25e00aa;
 }
 
 #tecnico-container h3 {
