--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body {
   gap: 20px;
   overflow-x: auto; /* scroll horizontal solo si hace falta */
   padding: 10px 0;
+  width: max-content;
   justify-content: center;
 }
 
@@ -100,10 +101,11 @@ body {
 }
 
 #licenciatura-container {
-  max-width: 1300px; /* 5 columnas * 250px + gaps */
+  max-width: 1900px; /* 5 columnas * 250px + gaps */
   margin: 0 auto 30px;
   background: #fff8f5;
   border-radius: 12px;
   padding: 20px;
   box-shadow: 0 0 12px #ccc;
+  overflow-x: visible;
 }
