--- a/style.css
+++ b/style.css
@@ -20,10 +20,12 @@ body {
   width: 1900px;
   margin: 0 auto;
   justify-content: center;
+  flex-wrap:nowrap;
+  overflow-x: auto;
 }
 
 .columna {
-  flex: 0 0 250px; /* ancho fijo */
+  flex: 0 0 340px; /* ancho fijo */
   display: flex;
   flex-direction: column;
   gap: 10px;
@@ -39,7 +41,8 @@ body {
   background-color: #e19494;
   border: 3px solid #b66262;
   cursor: pointer;
-  min-width: 200px;
+  min-width: unset;
+  max-width: 100%;
   transition: 0.2s;
 }
 
