--- a/style.css
+++ b/style.css
@@ -16,11 +16,10 @@ body {
   gap: 20px;
   overflow-x: auto; /* scroll horizontal solo si hace falta */
   padding: 10px 0;
-  max-width: 100%;
+  width: 100%;
   width: 1900px;
   margin: 0 auto;
   justify-content: center;
-  flex-wrap: nowrap;
   overflow-x: auto;
 }
 
@@ -42,7 +41,6 @@ body {
   border: 3px solid #b66262;
   cursor: pointer;
   min-width: 180px;
-  max-width: 100%;
   transition: 0.2s;
 }
 
