--- a/style.css
+++ b/style.css
@@ -18,8 +18,7 @@ body {
   padding: 10px 0;
   width: 100%;
   margin: 0 auto;
-  justify-content: flex-start;
-  overflow-x: auto;
+  justify-content: center;
 }
 
 .columna {
