--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body {
   display: flex;
   flex-direction: column;
   gap: 10px;
-  background: #fff8f5;
+  background: #f8eee9;
   padding: 10px;
   border-radius: 12px;
   box-shadow: 0 0 10px #ccc;
